# pola

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
pola-cli/: Cargo.toml
pola-cli/src/: main.rs
pola-core/: Cargo.toml  LICENSE
pola-core/benches/: core_bench.rs
pola-core/src/: extractor.rs  lib.rs  normalizer.rs
pola-core/src/db/: mod.rs  schema.sql
src/: main.rs
